Begin adding content

--- a/index.html
+++ b/index.html
@@ -1,3 +1,28 @@
 ---
 layout: default
 ---
+
+<header>
+  <div class="container">
+
+    <div class="row">
+      <div class="span6">
+        <h1>Try Transit</h1>
+        <p class="tagline">MTA sponsors a week to keep Middle Georgia moving.</p>
+      </div>
+    </div>
+
+  </div>
+</header>
+
+<div class="info">
+  <div class="container">
+    <div class="row">
+
+      <div class="span12">
+        <h2>Something here.</h2>
+      </div>
+
+    </div>
+  </div>
+</div>
