Begin adding preliminary style and content

--- a/index.html
+++ b/index.html
@@ -2,27 +2,129 @@
 layout: default
 ---
 
-<header>
+<div class="header">
   <div class="container">
 
     <div class="row">
-      <div class="span6">
+      <div class="span12">
         <h1>Try Transit</h1>
         <p class="tagline">MTA sponsors a week to keep Middle Georgia moving.</p>
       </div>
     </div>
 
   </div>
-</header>
+</div>
 
-<div class="info">
+<div class="apps">
   <div class="container">
-    <div class="row">
 
+    <div class="row">
       <div class="span12">
-        <h2>Something here.</h2>
+        <h2>Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Sed posuere consectetur est at lobortis. Vestibulum id ligula porta felis euismod semper.</h2>
+      </div>
+      <div class="span12">
+          <hr />
+      </div>
+    </div>
+
+    <div class="row">
+        <div class="span4">
+          <img src="http://placehold.it/800x500" alt="" />
+        </div>
+
+        <div class="span4">
+          <img src="http://placehold.it/800x500" alt="" />
+        </div>
+
+        <div class="span4">
+          <img src="http://placehold.it/800x500" alt="" />
+        </div>
+
+        <div class="span12">
+            <hr />
+        </div>
+    </div>
+  </div>
+</div>
+
+<div class="schedule">
+    <div class="container">
+
+      <div class="row">
+        <div class="span12">
+          <h2>Maecenas faucibus mollis interdum. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum.</h2>
+        </div>
+        <div class="span12">
+            <hr />
+        </div>
       </div>
 
+        <div class="row">
+          <div class="span2">
+            <img src="http://placehold.it/400x200" alt="" />
+          </div>
+          <div class="span4">
+            <h3>Sunday</h3>
+            <p>Curabitur blandit tempus porttitor. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+          </div>
+
+          <div class="span2">
+            <img src="http://placehold.it/400x200" alt="" />
+          </div>
+          <div class="span4">
+            <h3>Monday</h3>
+            <p>Curabitur blandit tempus porttitor. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="span2">
+            <img src="http://placehold.it/400x200" alt="" />
+          </div>
+          <div class="span4">
+            <h3>Tuesday</h3>
+            <p>Curabitur blandit tempus porttitor. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+          </div>
+
+          <div class="span2">
+            <img src="http://placehold.it/400x200" alt="" />
+          </div>
+          <div class="span4">
+            <h3>Wednesday</h3>
+            <p>Curabitur blandit tempus porttitor. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="span2">
+            <img src="http://placehold.it/400x200" alt="" />
+          </div>
+          <div class="span4">
+            <h3>Thursday</h3>
+            <p>Curabitur blandit tempus porttitor. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+          </div>
+
+          <div class="span2">
+            <img src="http://placehold.it/400x200" alt="" />
+          </div>
+          <div class="span4">
+            <h3>Friday</h3>
+            <p>Curabitur blandit tempus porttitor. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+          </div>
+        </div>
+
     </div>
+</div>
+
+<div class="footer">
+  <div class="container">
+
+    <div class="row">
+      <div class="span6">
+      </div>
+      <div class="span6">
+      </div>
+    </div>
+
   </div>
 </div>
