--- a/index.html
+++ b/index.html
@@ -29,15 +29,21 @@ layout: default
 
     <div class="row">
         <div class="span4">
-          <img src="http://placehold.it/800x500" alt="" />
+          <a href="#">
+            <img src="http://placehold.it/800x500" alt="" />
+          </a>
         </div>
 
         <div class="span4">
-          <img src="http://placehold.it/800x500" alt="" />
+          <a href="#">
+            <img src="http://placehold.it/800x500" alt="" />
+          </a>
         </div>
 
         <div class="span4">
-          <img src="http://placehold.it/800x500" alt="" />
+          <a href="#">
+            <img src="http://placehold.it/800x500" alt="" />
+          </a>
         </div>
 
         <div class="span12">
@@ -121,8 +127,14 @@ layout: default
 
     <div class="row">
       <div class="span6">
+        <a href="#">
+          <img src="http://placehold.it/600x300" alt="" />
+        </a>
       </div>
       <div class="span6">
+        <a href="#">
+          <img src="http://placehold.it/600x300" alt="" />
+        </a>
       </div>
     </div>
 
