--- a/index.html
+++ b/index.html
@@ -2,6 +2,29 @@
 layout: default
 ---
 
-<iframe width='500' height='600' frameBorder='0' src='http://a.tiles.mapbox.com/v3/jllord.mta.html'></iframe>
-<script type="text/javascript" charset="utf-8">
-</script>
+<div class="navbar navbar-fixed-top">
+  <div class="navbar-inner">
+    <div class="container">
+      <button type="button"class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <div class="nav-collapse collapse">
+        <div class="row">
+          <div class="span12">
+            <p>Hello world</p>
+          </div>
+        </div>
+
+    </div>
+  </div>
+</div>
+
+<div class="container-fluid map">
+  <div class="row-fluid">
+    <div class="span12">
+      <iframe width='500' height='600' frameBorder='0' src='http://a.tiles.mapbox.com/v3/jllord.mta.html'></iframe>
+    </div>
+  </div>
+</div>
