--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@ layout: default
       <div class="nav-collapse collapse">
         <div class="row">
           <div class="span12">
-            <p>Hello world</p>
+            <h1>Code for America</h1>
+            <p>Donec id elit non mi porta gravida at eget metus. Donec id elit non mi porta gravida at eget metus. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Etiam porta sem malesuada magna mollis euismod. Etiam porta sem malesuada magna mollis euismod. Nullam quis risus eget urna mollis ornare vel eu leo.</p>
           </div>
         </div>
       </div>
