--- a/index.html
+++ b/index.html
@@ -12,9 +12,12 @@ layout: default
       </button>
       <div class="nav-collapse collapse">
         <div class="row">
-          <div class="span12">
+          <div class="span11 offset2">
             <h1>Code for America</h1>
-            <p>Donec id elit non mi porta gravida at eget metus. Donec id elit non mi porta gravida at eget metus. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Etiam porta sem malesuada magna mollis euismod. Etiam porta sem malesuada magna mollis euismod. Nullam quis risus eget urna mollis ornare vel eu leo.</p>
+            <p>To help with <strong>Try Transit Week</strong>, <a href="http://codeforamerica.org">Code for America</a> has created this site in partnership with the <a href="http://www.mta-mac.org">Macon Transit Authority</a>.</p>
+            <p>We're also using GPS data to create an upcoming real-time <strong>SMS text-message application</strong> that would allow users to see when the nearest bus is coming, along with an <strong>online trip-planning tool</strong> for MTA riders. A mobile <strong>iPhone application</strong> is also in the works.</p>
+            <p>Check back here for periodic updates, and let us know what tools you think would make transit easier by <a href="mailto:macon@codeforamerica.org">sending an email to: <strong>macon@codeforamerica.org</strong></a>.</p>
+            <p class="apple hide">As you're an iPhone user, make sure to add this site to your home-screen, too.</p>
           </div>
         </div>
       </div>
