--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@ layout: default
       <div class="nav-collapse collapse">
         <div class="row">
           <div class="span11 offset2">
-            <h1>Code for America</h1>
             <p>To help with <strong>Try Transit Week</strong>, <a href="http://codeforamerica.org">Code for America</a> has created this site in partnership with the <a href="http://www.mta-mac.org">Macon Transit Authority</a>.</p>
             <p>We're also using GPS data to create an upcoming real-time <strong>SMS text-message application</strong> that would allow users to see when the nearest bus is coming, along with an <strong>online trip-planning tool</strong> for MTA riders. A mobile <strong>iPhone application</strong> is also in the works.</p>
-            <p>Check back here for periodic updates, and let us know what tools you think would make transit easier by <a href="mailto:macon@codeforamerica.org">sending an email to: <strong>macon@codeforamerica.org</strong></a>.</p>
+            <p>Check back here for periodic updates, and let us know what tools you think would make transit easier by <a href="mailto:macon@codeforamerica.org">sending us an email</a>.</p>
             <p class="apple hide">As you're an iPhone user, make sure to add this site to your home-screen, too.</p>
+            <a href="http://codeforamerica.org"><img src="/img/cfa.png" alt="Code for America" /></a>
           </div>
         </div>
       </div>
