--- a/index.html
+++ b/index.html
@@ -11,13 +11,15 @@ layout: default
         <span class="icon-bar"></span>
       </button>
       <div class="nav-collapse collapse">
+        <div class="container">
         <div class="row">
-          <div class="span12">
+          <div class="span11 offset2">
             <p>To help with <strong>Try Transit Week</strong>, <a href="http://codeforamerica.org">Code for America</a> has created this site in partnership with the <a href="http://www.mta-mac.org">Macon Transit Authority</a>.</p>
             <p>We're also using GPS data to create an upcoming real-time <strong>SMS text-message application</strong> that would allow users to see when the nearest bus is coming, along with an <strong>online trip-planning tool</strong> for MTA riders. A mobile <strong>iPhone application</strong> is also in the works.</p>
             <p>Check back here for periodic updates, and let us know what tools you think would make transit easier by <a href="mailto:macon@codeforamerica.org">sending us an email</a>.</p>
             <p class="apple hide">As you're an iPhone user, make sure to add this site to your home-screen, too.</p>
           </div>
+        </div>
         </div>
       </div>
 
