Give @jllord a good starting off point

--- a/index.html
+++ b/index.html
@@ -1,4 +1,133 @@
----
-layout: default
----
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title>Try MTA</title>
+    <meta name="description" content="Riding the bus is cool.">
+    <meta name="author" content="Jessica Lord, @jllord && Zach Williams, @zachwill">
 
+    <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
+    <!--[if lt IE 9]>
+      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+
+    <link rel="stylesheet" href="/css/bootstrap.css">
+    <link rel="stylesheet" href="/css/main.css">
+  </head>
+
+  <body data-spy="scroll" data-target=".subnav" data-offset="75">
+    <!-- Masthead
+    ================================================== -->
+      <header>
+        <div class="container">
+          <div class="row">
+
+            <div class="span12">
+              <!--Stuff-->
+            </div>
+
+          </div>
+        </div>
+      </header>
+
+      <div class="container">
+        <div class="subnav">
+          <ul class="nav nav-pills">
+            <li><a href="#opportunity">The Opportunity</a></li>
+            <li><a href="#program">The Program</a></li>
+            <li><a href="#team">The Team</a></li>
+            <li><a href="#proof">The Proof</a></li>
+            <li><a href="#faq">FAQ</a></li>
+          </ul>
+        </div>
+      </div>
+
+      <!-- Wrapper -->
+      <div class="container">
+
+        <div class="section" id="opportunity">
+          <div class="row">
+
+            <div class="span12">
+              <h1>THE OPPORTUNITY</h1>
+            </div>
+
+            <div class="span6">
+              <p>Cupcake ipsum dolor sit amet tart fruitcake pie jelly beans.  Sweet pastry pastry dragée marshmallow pudding biscuit. Brownie bear claw lemon drops tootsie roll gummies sweet macaroon chocolate cake. Tootsie roll halvah jujubes jujubes. Cookie muffin chocolate bar marzipan. Jujubes topping pudding sweet roll dragée pie applicake. Liquorice chocolate cake wypas sweet sesame snaps jelly beans tiramisu. Gummi bears faworki faworki chupa chups.  Topping jujubes topping cookie candy canes pastry pie. Cookie apple pie liquorice.</p>
+            </div>
+
+          </div>
+        </div>
+
+        <div class="section" id="program">
+          <div class="row">
+
+            <div class="span12">
+              <h1>THE PROGRAM</h1>
+            </div>
+
+            <div class="span6">
+              <p>Cupcake ipsum dolor sit amet tart fruitcake pie jelly beans.  Sweet pastry pastry dragée marshmallow pudding biscuit. Brownie bear claw lemon drops tootsie roll gummies sweet macaroon chocolate cake. Tootsie roll halvah jujubes jujubes. Cookie muffin chocolate bar marzipan. Jujubes topping pudding sweet roll dragée pie applicake. Liquorice chocolate cake wypas sweet sesame snaps jelly beans tiramisu. Gummi bears faworki faworki chupa chups.  Topping jujubes topping cookie candy canes pastry pie. Cookie apple pie liquorice.</p>
+            </div>
+
+          </div>
+        </div>
+
+        <div class="section" id="team">
+          <div class="row">
+
+            <div class="span12">
+              <h1>THE TEAM</h1>
+            </div>
+
+            <div class="span6">
+              <p>Cupcake ipsum dolor sit amet tart fruitcake pie jelly beans.  Sweet pastry pastry dragée marshmallow pudding biscuit. Brownie bear claw lemon drops tootsie roll gummies sweet macaroon chocolate cake. Tootsie roll halvah jujubes jujubes. Cookie muffin chocolate bar marzipan. Jujubes topping pudding sweet roll dragée pie applicake. Liquorice chocolate cake wypas sweet sesame snaps jelly beans tiramisu. Gummi bears faworki faworki chupa chups.  Topping jujubes topping cookie candy canes pastry pie. Cookie apple pie liquorice.</p>
+            </div>
+
+          </div>
+        </div>
+
+        <div class="section" id="proof">
+          <div class="row">
+
+            <div class="span12">
+              <h1>THE PROOF</h1>
+            </div>
+            <div class="span6">
+              <p>Cupcake ipsum dolor sit amet tart fruitcake pie jelly beans.  Sweet pastry pastry dragée marshmallow pudding biscuit. Brownie bear claw lemon drops tootsie roll gummies sweet macaroon chocolate cake. Tootsie roll halvah jujubes jujubes. Cookie muffin chocolate bar marzipan. Jujubes topping pudding sweet roll dragée pie applicake. Liquorice chocolate cake wypas sweet sesame snaps jelly beans tiramisu. Gummi bears faworki faworki chupa chups.  Topping jujubes topping cookie candy canes pastry pie. Cookie apple pie liquorice.</p>
+            </div>
+
+          </div>
+        </div>
+
+        <div class="section" id="faq">
+          <div class="row">
+
+            <div class="span12">
+              <h1>FAQ</h1>
+            </div>
+
+            <div class="span6">
+              <p>Cupcake ipsum dolor sit amet tart fruitcake pie jelly beans.  Sweet pastry pastry dragée marshmallow pudding biscuit. Brownie bear claw lemon drops tootsie roll gummies sweet macaroon chocolate cake. Tootsie roll halvah jujubes jujubes. Cookie muffin chocolate bar marzipan. Jujubes topping pudding sweet roll dragée pie applicake. Liquorice chocolate cake wypas sweet sesame snaps jelly beans tiramisu. Gummi bears faworki faworki chupa chups.  Topping jujubes topping cookie candy canes pastry pie. Cookie apple pie liquorice.</p>
+            </div>
+
+          </div>
+        </div>
+      </div>
+
+   <!-- Footer
+    ================================================== -->
+    <footer>
+      <div class="container">
+        <div class="row">
+          <div class="span12">
+          </div>
+        </div>
+      </div>
+    </footer>
+
+    <script type='text/javascript' src='http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js'></script>
+    <script type='text/javascript' src='/js/bootstrap.min.js'></script>
+    <script type='text/javascript' src='/js/main.js'></script>
+  </body>
+</html>
