--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <div class="span6">
               <p><a href="http://www.codeforamerica.org/" target="_blank">Code for America</a> is a non-profit based in San Francisco. Each year, we partner developers and designers from our fellowship program with cities to improve the way citizens interface with local government.</p>
 			  <h4>The Team</h4>
-			  <p>Macon, Georgia is one of the <a href="http://codeforamerica.org/cfa-2012/" tartet="_blank">8 cities</a> Code for America is working with in 2012. Macon's CfA team members are: <a href="http://www.twitter.com/zachwill">Zach</a>, a developer from Fort Worth; <a href="http://www.twitter.com/mapmeld">Nick</a>, a digital mapper from Nasuha, NH; and <a href="http://www.twitter.com/jllord">Jessica</a>, an urban designer born and rased in nearby Warner Robins, Ga.</p>
+			  <p>Macon, Georgia is one of the <a href="http://codeforamerica.org/cfa-2012/" tartet="_blank">8 cities</a> Code for America is working with in 2012. Macon's CfA team members are: <a href="http://www.twitter.com/zachwill">Zach</a>, a developer from Fort Worth; <a href="http://www.twitter.com/mapmeld">Nick</a>, a digital mapper from Nasuha, NH; and <a href="http://www.twitter.com/jllord">Jessica</a>, an urban designer born and raised in nearby Warner Robins, Ga.</p>
 			  <h4>Get in touch!</h4>
 			  <p>Feel free to contact us with your ideas, suggestions or questions. Ask when we're in town next, we'd love to meet up! Email us at: <a href="mailto:macon@codeforamerica.org">macon@codeforamerica.org</a></p>
 			  
