--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             </div>
 
             <div class="span6">
-              <p>Using historic data gathered form the GPS systems on each of the MTA's buses, we've created an application that allows anyone with a text-enabled phone to get information about bus schedules. 
+              <p>Using historic data gathered from the GPS systems on each of the MTA's buses, we've created an application that allows anyone with a text-enabled phone to get information about bus schedules. 
 			  <h4>How to</h4>
 			  	<div class="howto">
 					<ul>
